本文を書き換え

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus eos doloribus libero vero, doloremque recusandae consequatur fuga blanditiis laboriosam ducimus dolor, odit eligendi. Ad dolorum totam illo perspiciatis est!</p>
       </div>
       <div class="col-sm-4">
-        <h2>タイトル2</h2>
+        <h2>リベースを練習</h2>
         <img src="https://placehold.jp/300x200.png" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam eligendi sapiente odit ipsa illo aliquam velit beatae ullam voluptate laboriosam, enim nobis iste, provident, id a laudantium architecto earum! Quis?</p>
         <p>Laudantium illum velit earum beatae expedita necessitatibus, natus magnam quibusdam tempora consectetur tempore assumenda quo mollitia magni perspiciatis, aliquam dolorem. Nulla odio provident accusamus? Tempore aliquid eveniet sapiente consectetur eum.</p>
